@@ -1,1 +1,1 @@
-DIST cairoplot-1.1.tar.gz 49956 SHA256 cdc93b26ad01609c5acc34f1b827474b8c0e9b5e02acf2775708fe66489757f3
+DIST CairoPlot-1.2.tgz 38689 SHA256 e2487ba95f996c02555a5ba91af47713f0ce97dad376867172bcd989e6949b96 SHA512 abd493710e056f08968910432a2ff6528d57aa6b596878c6aba986ef1042204f5c08f55f95cfbf6f9d302285dfcbce1cc49bde41e5f244bdbd580184b8f69e43 WHIRLPOOL ffc062caf54e09ece5094497f47b33ac9cb0833b96995bd57396c6d29f0ea887da9db7ac5d0dc8096cfc9933ae4416e92cc9d5a0cbb9946c057f0704e215522d
