@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/CairoPlot
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*CairoPlot-1.2 (11 Jun 2013)
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -CairoPlot-1.1.ebuild,
+  +CairoPlot-1.2.ebuild, metadata.xml:
+  Version Bump; fix license; bump to EAPI=5 and new python r1 eclasses
 
   13 Apr 2011; Justin Lecher <jlec@gentoo.org> CairoPlot-1.1.ebuild:
   Fix for python ABI stuff
